Alpha0.2.1  temporary save

--- a/note/版本笔记.md
+++ b/note/版本笔记.md
@@ -237,11 +237,11 @@ sever主要在C#下构架，Python只做开启C#进程的作用。
 
 1. 对于Alpha0.1的C#库函数大体不变，但是要对于部分函数进行修改，添加部分功能，重新实现部分功能：
 
-   | 类          | 函数                                       | 修改情况                                                     | 备注     |
-   | ----------- | ------------------------------------------ | ------------------------------------------------------------ | -------- |
-   | DAQ_IO_DLL  | check_USB(bool link=True)                  | 添加了参数，当link为False时，可以只查找USB设备而不重新连接USB设备 | 重构功能 |
-   | SC_model_2E | s                                          | 将SlowControl的配置情况按照XML格式纯粹起来                   | 添加功能 |
-   | SC_model_2E | load_XML(string path = “./myConfigurtion”) | 载入XML，按照XML内的参数对配置进行修改配置                   | 添加功能 |
+   | 类          | 函数                                            | 修改情况                                                     | 备注     |
+   | ----------- | ----------------------------------------------- | ------------------------------------------------------------ | -------- |
+   | DAQ_IO_DLL  | check_USB(bool link=True)                       | 添加了参数，当link为False时，可以只查找USB设备而不重新连接USB设备 | 重构功能 |
+   | SC_model_2E | saveAsXML(string path = "./myConfigurtion.xml") | 将SlowControl的配置情况按照XML格式存储起来                   | 添加功能 |
+   | SC_model_2E | load_XML(string path = “./myConfigurtion.xml”)  | 载入XML，按照XML内的参数对配置进行修改配置                   | 添加功能 |
 
    
 
